[package]
name = "seams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
base16 = "0.2.1"
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
comrak = { version = "0.21.0", features = ["emojis", "shortcodes"] }
csscolorparser = { version = "0.6.2", features = ["serde"] }
derive_more = "0.99.17"
frunk = "0.4.2"
futures = "0.3.30"
gray_matter = "0.2.6"
html-escape = "0.2.13"
htmlentity = "1.3.1"
itertools = "0.12.0"
maud = "0.26.0"
md5 = "0.7.0"
mime = "0.3.17"
mime_guess = "2.0.4"
open = "5.0.1"
palette = "0.7.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
rss = { version = "2.0.7", features = ["atom", "validation"] }
rust-s3 = "0.33.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
serde_yaml = "0.9.30"
sha2 = "0.10.8"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["process", "fs", "tracing", "time", "sync", "io-util", "macros", "rt"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
vfs = "0.10.0"

[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.18.2"
